meta tags yess yyessss

--- a/website/archived/index.html
+++ b/website/archived/index.html
@@ -9,6 +9,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{{botName}} - An all-in-one Discord Bot</title>
+    <meta property="og:title" content=Mr. Bot | The Only Bot You'll Ever Need>
+    <meta property="og:image" content=https://mr-bot.ml/assets/profile>
+    <meta property="og:site_name" content=mr-bot.ml>
+    <meta property="og:url" content=https://mr-bot.ml>
+    <meta property="og:description" content=The only Discord Bot that you'll ever need! It comes with every features that are must-have for a community server and comes with the most customization you'll ever find! To invite this bot, click [here](https://mr-bot.ml/invite/)>
+    <meta property="og:type" content="">
     <link rel="stylesheet" href="./static/css/bulma.min.css" />
     <link rel="stylesheet" href="./static/css/style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
